# HelloDjinni

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/example/hellodjinni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  HelloDjinniImpl.cpp  HelloDjinniImpl.h  native-lib.cpp
app/src/main/java/com/example/hellodjinni/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hellodjinni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
